--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Dokumentations Site</title>
+    <link href="https://fonts.googleapis.com/css?family=Chango|Days+One|Vollkorn" rel="stylesheet">
 </head>
 
 <body>
