Udkast -minus layoutdiagram

--- a/index.html
+++ b/index.html
@@ -163,9 +163,99 @@
         <section id="udkast">
             <h2>Udkast til redesign</h2>
             <h3>Styletile</h3>
+            <div class="col">
+                <figure>
+                    <img src="images/styletile2.png">
+                    <figcaption>Redesign styltetile</figcaption>
+                </figure>
+
+            </div>
+
             <h3>Wireframe</h3>
+            <div class="left">
+                <div class="col">
+                    <figure>
+                        <img src="images/WF_Desktop.jpg" alt="">
+                        <figcaption>Wireframe destop</figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="right">
+                <div class="col">
+                    <figure>
+                        <img src="images/WF_Mobil.jpg" alt="">
+                        <figcaption>Wireframe mobil</figcaption>
+                    </figure>
+                </div>
+            </div>
             <h3>Layoutdiagram</h3>
-            <h3>Content</h3>
+            <h3>Content
+                <div class="top">
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/logo_nyfarve2.png" alt="">
+                            <figcaption>Logo med ny farve</figcaption>
+                        </figure>
+                    </div>
+
+
+
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/logo_uden_tekst.png" alt="">
+                            <figcaption>Logo uden tekst</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <div class="mid">
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/gr%C3%A6ssl%C3%A5ning2.png" alt="">
+                            <figcaption>Altmuligmand på havemaskine</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/leafblowerwithleavesgr%C3%A5.png" alt="">
+                            <figcaption>Løvblæser med bladblomst</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/gr%C3%A6soverlay.png" alt="">
+                            <figcaption>Græs</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <div class="bottom">
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/dkservice-sne-gr%C3%B8n_ny.png" alt="">
+                            <figcaption>Sne rydning</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/kort2.png" alt="">
+                            <figcaption>Kort over østsjæland</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col">
+                        <figure>
+                            <img src="billeder_brugt/tools2gr%C3%B8n.png" alt="">
+                            <figcaption>Værktøj med grøn skruetrækker </figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+
+            </h3>
 
 
         </section>
